# rstvscrp

./: .gitignore  AGENTS.md  fin-data.json
financial-services-plugins/: AGENTS.md
financial-services-plugins/claude-in-office/: AGENTS.md
financial-services-plugins/claude-in-office/commands/: manifest.md  setup.md
financial-services-plugins/equity-research/commands/: thesis.md
financial-services-plugins/investment-banking/: AGENTS.md
financial-services-plugins/investment-banking/commands/: process-letter.md
financial-services-plugins/investment-banking/skills/deal-tracker/: SKILL.md
financial-services-plugins/partner-built/lseg/: .mcp.json  README.md
financial-services-plugins/partner-built/lseg/.claude-plugin/: plugin.json
financial-services-plugins/partner-built/lseg/commands/: analyze-swap-curve.md
financial-services-plugins/private-equity/commands/: dd-checklist.md  returns.md  unit-economics.md
financial-services-plugins/tradingview-finance/: validate.sh
financial-services-plugins/tv-equity-research/commands/: morning-note.md
financial-services-plugins/tv-financial-analysis/skills/3-statement-model/: SKILL.md
financial-services-plugins/tv-financial-analysis/skills/shared/: data-fetchers.md
financial-services-plugins/tv-investment-banking/skills/process-letter/: SKILL.md
financial-services-plugins/tv-private-equity/.claude-plugin/: plugin.json
financial-services-plugins/wealth-management/commands/: tlh.md
plugins/: .mcp.json
plugins/.claude-plugin/: marketplace.json  plugin.json
plugins/financial-services-plugins/: MIGRATION.md  README.md
plugins/financial-services-plugins/claude-in-office/.claude-plugin/: plugin.json
plugins/financial-services-plugins/equity-research/: AGENTS.md
plugins/financial-services-plugins/financial-analysis/: AGENTS.md
plugins/financial-services-plugins/investment-banking/: README.md
plugins/financial-services-plugins/partner-built/: AGENTS.md
plugins/financial-services-plugins/tradingview-finance/: .mcp.json
plugins/financial-services-plugins/tv-private-equity/: .mcp.json
plugins/financial-services-plugins/wealth-management/: AGENTS.md
plugins/plugins/: .gitignore
plugins/plugins/financial-services-plugins/: CLAUDE.md
sec-edgar-module/: Cargo.toml
sec-edgar-module/src/: cik_lookup.rs  client.rs  debt_maturity.rs  lib.rs
tokio-tungstenite/: Cargo.toml
tokio-tungstenite/src/: connect.rs  lib.rs  proxy.rs
tradingview-mcp/: Cargo.toml  README.md  test_api.py  verify_api.sh
tradingview-mcp/examples/: comps_analysis.md  dcf_analysis.md
tradingview-mcp/src/: client.rs  lib.rs  main.rs  merge.rs  sec_edgar.rs
tradingview-mcp/src/handlers/: calendar.rs  fundamentals.rs  historical.rs  mod.rs  quote.rs  screener.rs  sec.rs  technical.rs  wrapped.rs
tradingview-mcp/src/tools/: mod.rs
tradingview-mcp/tests/: integration_test.rs
tvdata-rs/: .gitignore  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  README.snippet.md
tvdata-rs/.github/workflows/: ci.yml
tvdata-rs/assets/: field_registry.json
tvdata-rs/examples/: capture_qsd.rs  crypto.rs  dividend_calendar.rs  download.rs  earnings_calendar.rs  economics.rs  equity.rs  forex.rs  history.rs  history_max.rs  ipo_calendar.rs  live_batch_bench.rs  metainfo.rs  scan.rs  scan_supported.rs  scan_validated.rs  search.rs  test_china_all.rs  test_sse.rs  test_symbol.rs  wss_compare.rs
tvdata-rs/src/: batch.rs  error.rs  lib.rs  metadata.rs  time_series.rs
tvdata-rs/src/calendar/: mod.rs  tests.rs
tvdata-rs/src/client/: mod.rs  tests.rs
tvdata-rs/src/crypto/: mod.rs  tests.rs
tvdata-rs/src/economics/: mod.rs  tests.rs
tvdata-rs/src/equity/: columns.rs  decode.rs  history.rs  mod.rs  tests.rs  types.rs
tvdata-rs/src/forex/: mod.rs  tests.rs
tvdata-rs/src/history/: fetch.rs  mod.rs  request.rs
tvdata-rs/src/market_data/: columns.rs  decode.rs  loader.rs  mod.rs  types.rs
tvdata-rs/src/scanner/: field.rs  filter.rs  metainfo.rs  mod.rs  query.rs  registry.rs  response.rs  validation.rs
tvdata-rs/src/scanner/fields/: analyst.rs  calendar.rs  core.rs  financials.rs  fundamentals.rs  mod.rs  performance.rs  price.rs  technical.rs
tvdata-rs/src/search/: mod.rs  tests.rs
tvdata-rs/src/transport/: debug_log.rs  mod.rs  quote_session.rs  websocket.rs
tvdata-rs/tests/fixtures/economics/: calendar_sample.json
tvdata-rs/tests/fixtures/history/: timescale_update.json
tvdata-rs/tests/fixtures/scanner/: scan_response.json
tvdata-rs/tests/fixtures/search/: aapl_v3.json
tvdata-service/: AGENTS.md  API文档.md  Cargo.toml  README.md  config.yaml
tvdata-service/data/: tvmonitor.db
tvdata-service/examples/: test_fetch_all.rs  test_history.rs
tvdata-service/src/: config.rs  db.rs  error.rs  history_refresh.rs  lib.rs  main.rs  models.rs  stress_tests.rs  tvclient.rs
tvdata-service/src/alert/: mod.rs  webhook.rs
tvdata-service/src/api/: alerts.rs  history.rs  mod.rs  monitors.rs  quotes.rs  rules.rs  search.rs  shutdown.rs
tvdata-service/src/indicators/: macd.rs  mod.rs  rsi.rs
tvdata-service/src/monitor/: calendar.rs  indicator.rs  mod.rs  price.rs
(+89 files in other folders)
