[package]
name = "sec-edgar-module"
version = "0.1.0"
edition = "2021"
authors = ["Financial Service Team"]
description = "SEC EDGAR debt maturity extraction module"
license = "MIT"

[dependencies]
tokio = { version = "1.35", features = ["full"] }
reqwest = { version = "0.11", default-features = false, features = ["json", "rustls-tls"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
quick-xml = { version = "0.31", features = ["serialize"] }
thiserror = "1.0"
chrono = { version = "0.4", features = ["serde"] }
regex = "1.10"

[dev-dependencies]
tokio-test = "0.4"
mockito = "1.2"
