[package]
name = "tradingview-mcp"
version = "0.1.0"
edition = "2021"

[dependencies]
rmcp = "0.2"
tokio = { version = "1", features = ["full"] }
axum = "0.8"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
schemars = "0.8"
tower-http = { version = "0.6", features = ["cors"] }
tvdata-rs = { path = "../tvdata-rs", features = ["calendar"] }
tokio-util = "0.7"
tracing = "0.1"
tracing-subscriber = "0.3"
thiserror = "2"
rand = "0.9"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
governor = "0.8"
hyper = { version = "0.14", features = ["server", "http1", "http2", "tcp"] }
async-trait = "0.1"
chrono = { version = "0.4", features = ["serde"] }
time = { version = "0.3", features = ["formatting"] }

[dev-dependencies]
tokio-test = "0.4"

[patch.crates-io]
tungstenite = { path = "../tungstenite-rs", version = "0.28" }
tokio-tungstenite = { path = "../tokio-tungstenite", version = "0.28" }
