[package]
name = "tvdata-rs"
version = "0.1.2"
edition = "2024"
rust-version = "1.85"
description = "Async Rust client for TradingView screener queries, search, calendars, quote snapshots, and OHLCV history."
readme = "README.md"
license = "MIT"
repository = "https://github.com/Kluzko/tvdata-rs"
homepage = "https://github.com/Kluzko/tvdata-rs"
documentation = "https://docs.rs/tvdata-rs"
keywords = ["tradingview", "market-data", "finance", "scanner", "stocks"]
categories = ["api-bindings", "finance"]

[features]
default = ["search", "equity", "forex", "crypto", "calendar", "economics"]
search = []
equity = []
forex = []
crypto = []
calendar = []
economics = []
tracing = ["dep:tracing"]

[dependencies]
bon = "3.9.1"
futures-util = { version = "0.3.31", default-features = false, features = ["sink", "std"] }
http = "1.3.1"
once_cell = "1.21.3"
reqwest = { version = "0.12.15", default-features = false, features = ["json", "rustls-tls", "http2"] }
reqwest-middleware = { version = "0.4.2", default-features = false, features = ["json"] }
reqwest-retry = { version = "0.7.0", default-features = false }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
thiserror = "2.0.12"
time = { version = "0.3.41", features = ["formatting", "macros", "parsing", "serde"] }
tokio = { version = "1.44.2", features = ["macros", "net", "rt-multi-thread", "sync", "time"] }
tokio-tungstenite = { version = "0.28", features = ["rustls-tls-webpki-roots", "proxy"] }
tracing = { version = "0.1.41", optional = true }
url = "2.5.8"

[dev-dependencies]
wiremock = "0.6.3"

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[patch.crates-io]
tungstenite = { path = "../tungstenite-rs", version = "0.28" }
tokio-tungstenite = { path = "../tokio-tungstenite", version = "0.28" }

