[package]
name = "tvdata_service"
version = "0.1.0"
edition = "2024"
rust-version = "1.85"
description = "TradingView data monitoring and alerting service"

[dependencies]
tvdata-rs = { path = "../tvdata-rs", features = ["default", "calendar", "search", "tracing"] }
tokio = { version = "1", features = ["full"] }
axum = { version = "0.7", features = ["macros"] }
serde = { version = "1", features = ["derive"] }
serde_yaml = "0.9"
serde_json = "1.0"
sqlx = { version = "0.8", features = ["runtime-tokio", "sqlite", "chrono", "uuid"] }
libsqlite3-sys = { version = "0.30", default-features = false, features = ["bundled"] }
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1", features = ["v4", "serde"] }
thiserror = "2.0"
anyhow = "1"
once_cell = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls", "system-proxy"] }
reqwest-middleware = "0.4"
tower = "0.4"
tower-http = { version = "0.5", features = ["cors", "trace"] }
time = { version = "0.3", features = ["formatting", "macros", "parsing"] }

[dev-dependencies]
tower = { version = "0.4", features = ["util"] }
hyper = "1"
futures = "0.3"

[patch.crates-io]
tungstenite = { path = "../tungstenite-rs", version = "0.28" }
tokio-tungstenite = { path = "../tokio-tungstenite", version = "0.28" }

[[bin]]
name = "tvdata-service"
path = "src/main.rs"

[[example]]
name = "test_history"
path = "examples/test_history.rs"
